@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/bootloader-setup.sh,v 1.36 2006/04/20 15:17:01 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/support/bootloader-setup.sh,v 1.37 2006/06/15 22:18:51 wolf31o2 Exp $
 . ${clst_sharedir}/targets/support/functions.sh
 . ${clst_sharedir}/targets/support/filesystem-functions.sh
 
@@ -20,6 +20,16 @@ case ${clst_mainarch} in
 		# NO SOFTLEVEL SUPPORT YET
 		acfg=$1/etc/aboot.conf
 		bctr=0
+		# Pass 1 is for non-serial
+		for x in ${clst_boot_kernel}
+		do
+			echo -n "${bctr}:/boot/${x} " >> ${acfg}
+			echo -n "initrd=/boot/${x}.igz root=/dev/ram0 " >> ${acfg}
+			echo "init=/linuxrc ${cmdline_opts} cdroot" >> ${acfg}
+			((bctr=${bctr}+1))
+		done
+		# Pass 2 is for serial
+		cmdline_opts="${cmdline_opts} console=ttyS0"
 		for x in ${clst_boot_kernel}
 		do
 			echo -n "${bctr}:/boot/${x} " >> ${acfg}
